@@ -6,6 +6,7 @@
    (e.g. 5px) gap on the side.
 3. Sort players in 'Information' dialog.
 4. Use "v-show" to control when to show mobile pages.
+5. Allow browse modes containing genre_id to be pinned to home screen.
 
 1.0.0
 -----
